--- a/cloudy_salesforce/generator/templates/sobject.jinja2
+++ b/cloudy_salesforce/generator/templates/sobject.jinja2
@@ -1,10 +1,11 @@
 from typing import TypedDict, Literal
+from cloudy_salesforce.generator import sobject
 
 {% for field_type, picklist in picklist_fields %}
 {{ field_type }} = Literal["{{ picklist|join('", "') }}"]
 {%- endfor %}
 
-
+@sobject()
 class {{ sobject }}(TypedDict, total=False):
 {%- for field_name, field_type in fields %}
     {{ field_name }}: {{ field_type }} | None
